add header to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-    
+    <header class="menu">
+        <div class="menu__logo">
+            <img src="images/Icon Logo Normal.svg" alt="">
+                <span>CAR</span> sharing
+        </div>
+        <nav class="menu__nav">
+            <ul class="menu__nav--list">
+                <li>home</li>
+                <li>blog</li>
+                <li>service</li>
+                <li>contact</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
