add section banner to body

--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
             </ul>
         </nav>
     </header>
+    <section class="banner">
+        <h1 class="banner__title">car sharing</h1>
+        <div class="banner__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi dolores magni autem facilis delectus eos itaque. Adipisci praesentium dolorem cum architecto quia fugiat atque aperiam, quis, nobis, autem repellat aut.</div>
+        <div class="banner__btn">
+            <button class="btn1">share a car</button>
+            <button class="btn2">key features</button>
+        </div>
+        <img class="banner__arrow" src="images/Icon Arrow Down.svg" alt="">
+    </section>
 </body>
 </html>
