add section service to body

--- a/index.html
+++ b/index.html
@@ -9,28 +9,70 @@
     <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-    <header class="menu">
-        <div class="menu__logo">
-            <img src="images/Icon Logo Normal.svg" alt="">
+    <header class="bmw">
+        <div class="overlay">
+        <div class="black"></div>
+        <div class="menu">
+            <div class="menu__logo">
+                <img src="images/Icon Logo Normal.svg" alt="">
                 <span>CAR</span> sharing
+            </div>
+            <nav class="menu__nav">
+                <ul class="menu__nav--list">
+                    <div class="menu__nav--home">
+                        <li class="home"><a href="#">HOME</a></li>
+                    </div>
+                        <li> <a href="#">blog</a> </li>
+                        <li> <a href="#">blog</a> </li>
+                        <li> <a href="#">blog</a> </li>
+                </ul>
+            </nav>
         </div>
-        <nav class="menu__nav">
-            <ul class="menu__nav--list">
-                <li>home</li>
-                <li>blog</li>
-                <li>service</li>
-                <li>contact</li>
-            </ul>
-        </nav>
+
+            <div class="container">
+                <section class="banner">
+                    <h1 class="banner__title">car sharing</h1>
+                    <div class="banner__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi dolores magni autem facilis delectus eos itaque. Adipisci praesentium dolorem cum architecto quia fugiat atque aperiam, quis, nobis, autem repellat aut.</div>
+                    <div class="banner__btn">
+                        <button class="btn">share a car</button>
+                        <button class="btn color">key features</button>
+                    </div>
+                    <div class="banner__arrow">
+                    <img class="banner__arrow--size" src="images/Icon Arrow Down.svg" alt="">
+                </div>
+                </section>
+            </div>
+        </div>
     </header>
-    <section class="banner">
-        <h1 class="banner__title">car sharing</h1>
-        <div class="banner__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi dolores magni autem facilis delectus eos itaque. Adipisci praesentium dolorem cum architecto quia fugiat atque aperiam, quis, nobis, autem repellat aut.</div>
-        <div class="banner__btn">
-            <button class="btn1">share a car</button>
-            <button class="btn2">key features</button>
+
+    <section class="service">
+        <div class="service__title">
+        <h1 class="service__title--edit">Blog</h1>
+    </div>
+    <div class="container">
+        <div class="blog">    
+        <div class="blog__cards">
+            <img src="images/photo1.png" alt="">
+            <div class="blog__text--title">Lorem ipsum</div>
+            <div class="blog__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fuga, nemo non esse officia amet, molestiae nihil reprehenderit iste, maiores illo voluptatem sequi officiis ex hic porro necessitatibus at incidunt.</div>
+            <button class="blog__btn">read more</button>
         </div>
-        <img class="banner__arrow" src="images/Icon Arrow Down.svg" alt="">
+
+        <div class="blog__cards">
+            <img src="images/photo2.png" alt="">
+            <div class="blog__text--title">Lorem ipsum</div>
+            <div class="blog__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fuga, nemo non esse officia amet, molestiae nihil reprehenderit iste, maiores illo voluptatem sequi officiis ex hic porro necessitatibus at incidunt.</div>
+            <button class="blog__btn">read more</button>
+        </div>
+
+        <div class="blog__cards">
+            <img src="images/photo3.png" alt="">
+            <div class="blog__text--title">Lorem ipsum</div>
+            <div class="blog__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fuga, nemo non esse officia amet, molestiae nihil reprehenderit iste, maiores illo voluptatem sequi officiis ex hic porro necessitatibus at incidunt.</div>
+            <button class="blog__btn">read more</button>
+        </div>
+    </div>
+    </div>
     </section>
 </body>
 </html>
