change names of class in section blog

--- a/index.html
+++ b/index.html
@@ -45,31 +45,31 @@
         </div>
     </header>
 
-    <section class="service">
-        <div class="service__title">
-        <h1 class="service__title--edit">Blog</h1>
+    <section class="blog">
+        <div class="blog__title">
+        <h1 class="blog__title--edit">Blog</h1>
     </div>
     <div class="container">
-        <div class="blog">    
-        <div class="blog__cards">
+        <div class="cards">    
+        <div class="cards__box">
             <img src="images/photo1.png" alt="">
-            <div class="blog__text--title">Lorem ipsum</div>
-            <div class="blog__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fuga, nemo non esse officia amet, molestiae nihil reprehenderit iste, maiores illo voluptatem sequi officiis ex hic porro necessitatibus at incidunt.</div>
-            <button class="blog__btn">read more</button>
+            <div class="cards__text--title">Lorem ipsum</div>
+            <div class="cards__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fuga, nemo non esse officia amet, molestiae nihil reprehenderit iste, maiores illo voluptatem sequi officiis ex hic porro necessitatibus at incidunt.</div>
+            <button class="cards__btn">read more</button>
         </div>
 
-        <div class="blog__cards">
+        <div class="cards__box">
             <img src="images/photo2.png" alt="">
-            <div class="blog__text--title">Lorem ipsum</div>
-            <div class="blog__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fuga, nemo non esse officia amet, molestiae nihil reprehenderit iste, maiores illo voluptatem sequi officiis ex hic porro necessitatibus at incidunt.</div>
-            <button class="blog__btn">read more</button>
+            <div class="cards__text--title">Lorem ipsum</div>
+            <div class="cards__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fuga, nemo non esse officia amet, molestiae nihil reprehenderit iste, maiores illo voluptatem sequi officiis ex hic porro necessitatibus at incidunt.</div>
+            <button class="cards__btn">read more</button>
         </div>
 
-        <div class="blog__cards">
+        <div class="cards__box">
             <img src="images/photo3.png" alt="">
-            <div class="blog__text--title">Lorem ipsum</div>
-            <div class="blog__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fuga, nemo non esse officia amet, molestiae nihil reprehenderit iste, maiores illo voluptatem sequi officiis ex hic porro necessitatibus at incidunt.</div>
-            <button class="blog__btn">read more</button>
+            <div class="cards__text--title">Lorem ipsum</div>
+            <div class="cards__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fuga, nemo non esse officia amet, molestiae nihil reprehenderit iste, maiores illo voluptatem sequi officiis ex hic porro necessitatibus at incidunt.</div>
+            <button class="cards__btn">read more</button>
         </div>
     </div>
     </div>
