--- a/index.html
+++ b/index.html
@@ -76,35 +76,39 @@
     </section>
 
     <section class="service">
-        <h1 class="service__title">Service</h1>
+        <div class="service__title">
+        <h1 class="service__title--edit">Service</h1>
+    </div>
         <div class="container">
-            <div class="service__cards">
+        <div class="service__cards">
+            <div class="service__cards--edit">
                 <img src="images/mini1.png" alt="">
                 <div class="cards__title">lorem ipsum sit dolor</div>
                 <div class="cards__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore molestiae nam atque ipsam reiciendis iste totam impedit, voluptatum sequi eos laboriosam quisquam iure voluptatibus adipisci accusamus facilis rerum placeat accusantium.</div>
                 <button class="cards__btn">read more</button>
             </div>
 
-            <div class="service__cards">
+            <div class="service__cards--edit">
                 <img src="images/mini2.png" alt="">
                 <div class="cards__title">lorem ipsum sit dolor</div>
                 <div class="cards__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore molestiae nam atque ipsam reiciendis iste totam impedit, voluptatum sequi eos laboriosam quisquam iure voluptatibus adipisci accusamus facilis rerum placeat accusantium.</div>
                 <button class="cards__btn">read more</button>
             </div>
 
-            <div class="service__cards">
+            <div class="service__cards--edit">
                 <img src="images/mini3.png" alt="">
                 <div class="cards__title">lorem ipsum sit dolor</div>
                 <div class="cards__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore molestiae nam atque ipsam reiciendis iste totam impedit, voluptatum sequi eos laboriosam quisquam iure voluptatibus adipisci accusamus facilis rerum placeat accusantium.</div>
                 <button class="cards__btn">read more</button>
             </div>
 
-            <div class="service__cards">
+            <div class="service__cards--edit">
                 <img src="images/mini4.png" alt="">
                 <div class="cards__title">lorem ipsum sit dolor</div>
                 <div class="cards__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore molestiae nam atque ipsam reiciendis iste totam impedit, voluptatum sequi eos laboriosam quisquam iure voluptatibus adipisci accusamus facilis rerum placeat accusantium.</div>
                 <button class="cards__btn">read more</button>
             </div>
+        </div>
         </div>
     </section>
 </body>
