add section contact

--- a/index.html
+++ b/index.html
@@ -111,5 +111,23 @@
         </div>
         </div>
     </section>
+
+    <div class="container">
+    <section class="contact">
+            <div class="blog__title">
+                <h1 class="blog__title--edit">contact</h1>
+            </div>
+            <form>
+                <img src="images/Form Photo.png" alt="">
+                <input type="text" placeholder="type your name">
+                <input type="text" placeholder="type your e-mail">
+                <textarea name="" id="" cols="30" rows="10" placeholder="left your message"></textarea>
+        </form>
+
+        </div>
+    </section>
+    <footer>
+        <div class="foot"></div>
+    </footer>
 </body>
 </html>
