add form to body

--- a/index.html
+++ b/index.html
@@ -112,19 +112,30 @@
         </div>
     </section>
 
-    <div class="container">
-    <section class="contact">
-            <div class="blog__title">
+ <div class="container">    
+         <div class="blog__title">
                 <h1 class="blog__title--edit">contact</h1>
-            </div>
-            <form>
+        </div>
+ </div>
+ <div class="container">
+        <form class="form">
+            <div class="form__img">
                 <img src="images/Form Photo.png" alt="">
+            </div>
+            <label class="form__input">
                 <input type="text" placeholder="type your name">
                 <input type="text" placeholder="type your e-mail">
                 <textarea name="" id="" cols="30" rows="10" placeholder="left your message"></textarea>
-        </form>
-
-        </div>
+                <label class="checkbox">
+                    <input type="checkbox" class="checkbox__tik">
+                    <div class="checkbox__text">
+                    Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu (zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. z 2002r. Nr 101, poz. 926 ze zm.).
+                    </div>
+                  </label>
+                  <button class="cards__btn form__btn">SEND</button>
+                </label>
+            </form>
+    </div>
     </section>
     <footer>
         <div class="foot"></div>
