add footer to body

--- a/index.html
+++ b/index.html
@@ -138,7 +138,29 @@
     </div>
     </section>
     <footer>
-        <div class="foot"></div>
+        <div class="container">
+            <div class="foot__title">
+                <img src="images/Icon Logo Normal.svg" alt="">
+                <span>CAR</span> Sharing
+            </div>
+            <div class="foot__menu">
+                <div class="foot__menu--box">
+                <ul class="foot__menu--list1">
+                    <li>home page</li>
+                    <li>about us</li>
+                    <li>gallery</li>
+                    <li>share regulation</li>
+                </ul>
+                <ul class="foot__menu--list2">
+                    <li>price</li>
+                    <li>our fleet</li>
+                    <li>our clients</li>
+                    <li>contact</li>
+                </ul>
+            </div>
+                <div class="foot__menu--copy">Copyrights &copy CodersLab</div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
